Setting up everything.

--- a/web/src/styles/layout.css
+++ b/web/src/styles/layout.css
@@ -19,3 +19,17 @@ body > div,
 body > div > div {
   height: 100%;
 }
+
+
+h2 {
+  line-height: 1.2;
+  word-spacing: 1px;
+  font-weight: 700;
+  color: rgb(11, 33, 123);
+  font-size: 2.5rem;
+}
+h1, h2, h3, h4, h5 {
+  margin-bottom: 1.5rem;
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+}
