--- a/web/src/components/blog-post.module.css
+++ b/web/src/components/blog-post.module.css
@@ -11,7 +11,7 @@
   display: block;
   position: relative;
   background: var(--color-very-light-gray);
-  padding-bottom: calc(9 / 16 * 100%);
+  padding-bottom: 300px;
 
   @nest & img {
     display: block;
